Fixes popup form on mobile

--- a/themes/hush/src/sass/modules/popup/_mobile.sass
+++ b/themes/hush/src/sass/modules/popup/_mobile.sass
@@ -204,3 +204,6 @@
     transform: rotate(360deg)
 .closePopup
   cursor: pointer
+.sitePopup__content__description
+  p
+    padding: 0 10px  
